force-app/main/default/objects/noduplicates__Matching_Rule__c/noduplicates__Matching_Rule__c.object-meta.xml
<CustomObject>
    <label>Matching Rule</label>
    <nameField>
        <displayFormat>MR-{0000000}</displayFormat>
        <label>Matching Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matching Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>