force-app/main/default/objects/noduplicates__Matching_Rule__c/fields/noduplicates__Available_For_Potential_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Available_For_Potential_Duplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available For Potential Duplicates</label>
    <type>Checkbox</type>
</CustomField>