force-app/main/default/objects/noduplicates__Matching_Rule__c/fields/noduplicates__Batch_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Batch_Completed_Date__c</fullName>
    <label>Batch Completed Date</label>
    <type>DateTime</type>
</CustomField>