force-app/main/default/objects/noduplicates__Matching_Rule__c/fields/noduplicates__Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Batch_Id__c</fullName>
    <label>Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>