force-app/main/default/objects/noduplicates__Matching_Rule__c/fields/noduplicates__Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Batch_Status__c</fullName>
    <label>Batch Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>