force-app/main/default/objects/noduplicates__Matching_Rule__c/fields/noduplicates__Cross_Filter_Condition__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Cross_Filter_Condition__c</fullName>
    <label>Cross Filter Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>