force-app/main/default/objects/noduplicates__Matching_Rule__c/fields/noduplicates__Cross_Object__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Cross_Object__c</fullName>
    <label>Cross Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>