force-app/main/default/objects/noduplicates__Matching_Rule__c/fields/noduplicates__Display_Fields__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Display_Fields__c</fullName>
    <label>Display Fields</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>