force-app/main/default/objects/noduplicates__Matching_Rule__c/fields/noduplicates__Name__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>