force-app/main/default/objects/noduplicates__Matching_Rule__c/fields/noduplicates__Object_Label__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Object_Label__c</fullName>
    <label>Object Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>