force-app/main/default/objects/noduplicates__Matching_Rule__c/fields/noduplicates__Records_Per_Object__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Records_Per_Object__c</fullName>
    <label>Records Per Object</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>