force-app/main/default/objects/noduplicates__Matching_Rule__c/fields/noduplicates__Search_across_main_object__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Search_across_main_object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Search across main object</label>
    <type>Checkbox</type>
</CustomField>