force-app/main/default/objects/noduplicates__Matching_Rule__c/listViews/noduplicates__All.listView-meta.xml
<ListView>
    <fullName>noduplicates__All</fullName>
    <columns>NAME</columns>
    <columns>noduplicates__Name__c</columns>
    <columns>noduplicates__Object__c</columns>
    <columns>noduplicates__Cross_Object__c</columns>
    <columns>noduplicates__Records_Per_Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>